--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>雜・す繝ｳ繝励Ν縺ｪ繝｢繝ｼ繝ｫ繧ｹ菫｡蜿ｷ陦ｨ</title>
+  <title>モールス信号(国際式)</title>
   <style>
     body {
       font-family: "Yu Gothic", "游ゴシック", sans-serif;
@@ -35,13 +35,13 @@
   </style>
 </head>
 <body>
-  <h1>繝｢繝ｼ繝ｫ繧ｹ菫｡蜿ｷ陦ｨ・亥嵜髫帛ｼ擾ｼ・</h1>
+  <h1>モールス信号(国際式)</h1>
 
   <div class="tables">
     <section class="table-block">
-  <h2>繧｢繝ｫ繝輔ぃ繝吶ャ繝・</h2>
+  <h2>アルファベット</h2>
   <table border="1" cellpadding="4">
-    <tr><th>譁・ｭ・</th><th>繝｢繝ｼ繝ｫ繧ｹ菫｡蜿ｷ</th></tr>
+    <tr><th>アルファベット</th><th>モールス信号</th></tr>
     <tr><td>A</td><td>.-</td></tr>
     <tr><td>B</td><td>-...</td></tr>
     <tr><td>C</td><td>-.-.</td></tr>
@@ -72,9 +72,9 @@
     </section>
 
     <section class="table-block">
-  <h2>謨ｰ蟄・</h2>
+  <h2>数字</h2>
   <table border="1" cellpadding="4">
-    <tr><th>謨ｰ蟄・</th><th>繝｢繝ｼ繝ｫ繧ｹ菫｡蜿ｷ</th></tr>
+    <tr><th>数字</th><th>モールス信号</th></tr>
     <tr><td>0</td><td>-----</td></tr>
     <tr><td>1</td><td>.----</td></tr>
     <tr><td>2</td><td>..---</td></tr>
